Move strange interpolation fix to PreCheckExpression

This defers diagnosis until a stage where #if conditions have definitely been evaluated, at the cost of a slightly more complex implementation. We’ll gain some of that complexity back in a subsequent refactoring. Fixes SR-9937.

(cherry picked from commit a4e5bcea6a254a7a4da81e5b2127ffe5f6373031)